--- a/boards/arm/eyelash_sofle/eyelash_sofle_left_defconfig
+++ b/boards/arm/eyelash_sofle/eyelash_sofle_left_defconfig
@@ -42,8 +42,7 @@ CONFIG_ZMK_BLE=y
 
 # enable display drivers
 CONFIG_ZMK_DISPLAY=y
-
-
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=3840
 
 #CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 #CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2048
