--- a/config/west.yml
+++ b/config/west.yml
@@ -6,20 +6,20 @@ manifest:
       # See:
       # - https://zmk.dev/docs/features/modules
       # - https://docs.zephyrproject.org/3.5.0/develop/west/manifest.html#projects
-    # - name: gpeye #mario animation
-    #   url-base: https://github.com/GPeye #mario animation
-    - name: m165437 #gem animation
-      url-base: https://github.com/M165437 #gem animation
+    - name: gpeye #mario animation
+      url-base: https://github.com/GPeye #mario animation
+    # - name: m165437 #gem animation
+      # url-base: https://github.com/M165437 #gem animation
   projects:
     - name: eyelash_sofle
       url: https://github.com/a741725193/zmk-sofle
       revision: refactor
-    # - name: mario-peripheral-animation #mario animation
-    #   remote: gpeye #mario animation
-    #   revision: main #mario animation
-    - name: nice-view-gem #gem animation
-      remote: m165437 #gem animation
-      revision: main #gem animation
+    - name: mario-peripheral-animation #mario animation
+      remote: gpeye #mario animation
+      revision: main #mario animation
+    # - name: nice-view-gem #gem animation
+    #   remote: m165437 #gem animation
+    #   revision: main #gem animation
     - name: zmk
       remote: zmkfirmware
       revision: main
