--- a/build.yaml
+++ b/build.yaml
@@ -1,9 +1,9 @@
 ---
 include:
   - board: eyelash_sofle_left
-    shield: nice_view_gem
+    shield: nice_view
   - board: eyelash_sofle_right
-    shield: nice_view_gem
+    shield: nice_view_mario
   # - board: eyelash_sofle_left
   #   shield: nice_view
   #   snippet: studio-rpc-usb-uart
