--- a/build.yaml
+++ b/build.yaml
@@ -9,5 +9,5 @@ include:
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
     artifact-name: eyelash_sofle_studio_left
-  - board: eyelash_sofle
+  - board: eyelash_sofle_left
     shield: settings_reset
