--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 ---
 include:
- # - board: eyelash_sofle_left
-#    shield: nice_view
+  - board: eyelash_sofle_left
+    shield: nice_view
   - board: eyelash_sofle_right
     shield: nice_view_custom
   - board: eyelash_sofle_left
@@ -9,5 +9,5 @@ include:
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
     artifact-name: eyelash_sofle_studio_left
-  - board: eyelash_sofle_left
+  - board: eyelash_sofle
     shield: settings_reset
